[tool.poetry]
name = "voyager_server"
version = "0.1.0"
description = ""
authors = ["Andrew Crutchfield <andrewjcrutchfield@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytz = "2020.1"
python-slugify = "4.0.1"
Pillow = "7.2.0"
argon2-cffi = "20.1.0"
redis = "3.5.3"
hiredis = "1.0.1"
celery = "4.4.6"
django-celery-beat = "2.0.0"
django = "3.0.8"
django-environ = "0.4.5"
django-model-utils = "4.0.0"
django-allauth = "0.42.0"
django-crispy-forms = "1.9.1"
django-redis = "4.12.1"
djangorestframework = "3.11.0"
Werkzeug = "1.0.1"
ipdb = "0.13.3"
psycopg2-binary = "2.8.5"
mypy = "0.782"
pytest = "5.4.3"
pytest-sugar = "0.9.4"
sphinx = "3.1.2"
sphinx-autobuild = "0.7.1"
flake8 = "3.8.3"
flake8-isort = "3.0.1"
coverage = "5.2"
black = "19.10b0"
pylint-django = "2.1.0"
pylint-celery = "0.3"
pre-commit = "2.6.0"
factory-boy = "2.12.0"
django-debug-toolbar = "2.2"
django-extensions = "3.0.3"
django-coverage-plugin = "1.8.0"
pytest-django = "3.9.0"
gunicorn = "20.0.4"
Collectfast = "2.2.0"
django-storages = {version = "1.9.1", extras = ["boto3"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
